rename rack endpoint to system
